WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.4.1 (2018-05-??)
------------------
Important note:
- ALL: Version 5.4.0 has been released to solve some fatal errors for Magento.
  This has been done while not all the documentation had been finished yet, so
  more backwards incompatible changes (for developers) will be found in this
  5.4.1 version.

Changes:
- ALL: Not all curl liraries define the CURL_SSLVERSION_TLSv1_2 constant, even
  if they support that TLS version.
- HS: Trying to get property of non-object in Joomla\HikaShop\Invoice\Source.php
  on line 139
- ALL: Looked up vat rates were not copied from parent to children.
- ALL: Config form now also displays the exception message when an exception
  was raised.
- WC: update_option() also returns false when there are no changes. We want to
  return true to prevent a user message "There was an error saving the config".
- ALL: As a consequence of documenting this library from a developers view
  point, non backwards compatible changes were made that simplify or reduce the
  amount of code that needs to be written when developing a new extension:
  - Order of constructor parameters changed to make it consistent among the
    various classes. This should only affect the Container class in the
    library.
  - Container::getManager() renamed to Container::getInvoiceManager().
  - Now that (since long) the library version is a constant, it can be passed
    to the constructor of Log, instead of setting it when the Config has been
    created.
  - Meta tags renamed to make them more consistent.
  - Form::addWarningMessage() renamed to Form::addWarningMessages().
  - Form::addErrorMessage() renamed to Form::addErrorMessages().
  - Form::isSubmitted() moved to a separate FormHelper class.
  - Form::getPostedValues() moved to a separate FormHelper class.
  - Form::systemValidate() removed, should be done in the webshop specific part.
  - Property source 'originalInvoiceSource' renamed to order.