@@ -26,6 +26,7 @@ Important note:
   5.4.1 version.
 
 Changes:
+- MA: Errors and warnings weren't shown when generated during saving the config.
 - ALL: Not all curl liraries define the CURL_SSLVERSION_TLSv1_2 constant, even
   if they support that TLS version.
 - HS: Trying to get property of non-object in Joomla\HikaShop\Invoice\Source.php
